[chandu] changes wrt CSS list-component

--- a/src/app/grid-list/presentationals/list-view/list-view.component.scss
+++ b/src/app/grid-list/presentationals/list-view/list-view.component.scss
@@ -10,6 +10,10 @@
   padding-top: 10px;
 }
 
+#list-sub-parent-iterator {
+  border-bottom: 1px solid rgba(128, 128, 128, .5);
+}
+
 .list-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -17,7 +21,7 @@
   grid-column-gap: 50px;
   grid-template-rows: 1fr;
 
-  .position {
+  .position, .name, .weight, .symbol {
     display: flex;
     align-items: center;
     justify-content: center;
