--- a/src/app/grid-list/presentationals/list-view/list-view.component.scss
+++ b/src/app/grid-list/presentationals/list-view/list-view.component.scss
@@ -27,3 +27,10 @@
     justify-content: center;
   }
 }
+
+::ng-deep .drag-placeholder {
+  background: #ccc;
+  border: dotted 3px #999;
+  min-height: 50px;
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
