[chandu] implemented list-view state update trigger event

--- a/src/app/grid-list/container/list-base/list-base.component.html
+++ b/src/app/grid-list/container/list-base/list-base.component.html
@@ -1,1 +1,4 @@
-<app-list-view [gridDataSource]="gridDataSource$ | async"></app-list-view>
+<app-list-view
+  [gridDataSource]="gridDataSource$ | async"
+  (updatePeridoicElement)="onUpdatePeridoicElement($event)"
+></app-list-view>
